Fixed the unwanted horizontally scrollbar, viewport problem.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,16 +18,7 @@ a {
 a:hover {
   color: #535bf2;
 }
-header {
-   background: 
-    linear-gradient(
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url("/client/src/assets/header.png");
-    height: 100vh;
-    
-}
+
 .title {
   position: absolute;
   top: 50%;
@@ -39,8 +30,7 @@ header {
 body {
   margin: 0;
   padding: 0;
-  min-width: 100vw;
-  min-height: 100vh;
+  
   background-image: url(assets/Background.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -52,7 +42,7 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-/* Add this line to set the size of implicitly created rows */
+  /* Add this line to set the size of implicitly created rows */
 }
 
 .card {
@@ -60,7 +50,6 @@ body {
   flex-direction: column;
   height: 100%; /* Make each card take 100% height of its container */
 }
-
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
